更新 Slamming 模型部分

--- a/Models/SpeechLM/2025.02.19_Slamming.md
+++ b/Models/SpeechLM/2025.02.19_Slamming.md
@@ -348,106 +348,188 @@ Lastly, we explore alternative training objectives beyond standard next-token pr
 
 </td><td>
 
+在上述设置下, 我们系统性地分析和消除训练流程中的每个组件, 最终精炼出训练 SLM 的优化方案.
+我们具体检查了模型系列, 初始化, 尺寸, 架构选择 (如随机失活, 位置编码等) 的影响.
+我们分析了优化参数和数据特征.
+最后, 我们探索了除了标准的 Next-Token 预测之外的可选训练目标, 包括使用合成数据的括语音-文本交错和直接偏好优化.
+
 </td></tr></table>
 
-### Model & Optimization
+### Model & Optimization: 模型与优化
 
 <table><tr><td width="50%">
 
-**Hyper-parameters.**
+**Hyper-Parameters**
 
-Unless specified otherwise, we use a context length of $512$ tokens and an effective batch size of $256$, employing gradient accumulation when necessary, as preliminary results indicated this configuration yields the best overall performance.
-We set the peak learning rate to $1e-3$ to enhance training speed and use a warmup period of $1\%$ of the total training steps, as this proved more effective than the fixed $100$-step warmup used in the original TWIST.
-To improve training stability, particularly with large learning rates, we apply gradient normalisation with a norm of $0.5$ at no additional cost, following **Cramming**[^geiping2023cramming].
-Unless modified later in our investigation, we use an inverse-square root scheduler and the AdamW optimiser[^loshchilov2017decoupled].
+Unless specified otherwise, we use a context length of 512 tokens and an effective batch size of 256, employing gradient accumulation when necessary, as preliminary results indicated this configuration yields the best overall performance.
+We set the peak learning rate to 1e-3 to enhance training speed and use a warmup period of 1% of the total training steps, as this proved more effective than the fixed 100-step warmup used in the original **TWIST**.
+To improve training stability, particularly with large learning rates, we apply gradient normalisation with a norm of 0.5 at no additional cost, following **Cramming**[^geiping2023cramming].
+Unless modified later in our investigation, we use an inverse-square root scheduler and the **AdamW optimiser**[^loshchilov2017decoupled].
 
 </td><td>
+
+**超参数**
+
+除非另有说明, 我们使用上下文长度为 512 个 Token, 有效批量大小为 256, 在必要时采用梯度累积, 初步结果表明该配置可以获得最佳的整体性能.
+我们设置学习率峰值为 1e-3 以增强训练速度并使用总训练步数的 1% 作为预热期, 这比原始 **TWIST** 中使用的固定 100 步预热更有效.
+为了提升训练稳定性, 尤其是大学习率, 我们采用梯度标准化, 范数为 0.5 且无额外成本, 遵循 **Cramming**[^geiping2023cramming].
+除非在我们的研究中作出修改, 我们使用倒数平方调度器和 **AdamW 优化器**[^loshchilov2017decoupled].
 
 </td></tr>
 <tr><td>
 
-**Initialisation.**
+**Initialisation**
 
 **TWIST**[^twist] empirically demonstrated that initialising SLMs with pre-trained text LMs can enhance convergence speed and improve model performance.
 We examine the effect of this initialisation within our setup across different model types.
-To do so, we train multiple models, both with and without TWIST initialisation, while staying within our compute budget.
-As shown in Figure~\ref{fig:initialisation}, TWIST initialisation benefits all evaluated models at the beginning of training, though its overall impact by the end varies.
-Notice, the x-axis in Figure~\ref{fig:initialisation} represents theoretical FLOPs, calculated as $6 * N_{params} * D_{tokens}$ following[^hoffmann2022training].
+To do so, we train multiple models, both with and without **TWIST** initialisation, while staying within our compute budget.
+As shown in [Figure.02](#Fig.02), **TWIST** initialisation benefits all evaluated models at the beginning of training, though its overall impact by the end varies.
+Notice, the x-axis in [Figure.02](#Fig.02) represents theoretical FLOPs, calculated as $6 * N_{params} * D_{tokens}$ following[^hoffmann2022training].
 However, due to variations in model architecture and implementation, practical efficiency differs, leading to varying amounts of compute processed within 24 hours.
 
-Results suggest that benefits of TWIST initialisation can be substantial, especially for top-performing models like Qwen$2.5$.
+Results suggest that benefits of **TWIST** initialisation can be substantial, especially for top-performing models like **Qwen2.5**.
 As a result, we prioritise investigations based on existing pre-trained text LMs.
-Interestingly, the results in Figure~\ref{fig:initialisation} demonstrate that Qwen$2.5$ outperforms other models even without TWIST initialisation, perhaps suggesting that their architectural design choices or size might also provide some benefit.
+Interestingly, the results in [Figure.02](#Fig.02) demonstrate that **Qwen2.5** outperforms other models even without **TWIST** initialisation, perhaps suggesting that their architectural design choices or size might also provide some benefit.
 
 </td><td>
+
+**初始化**
+
+**TWIST**[^twist] 经验表明, 使用预训练文本语言模型初始化 SLM 可以提升收敛速度并提升模型性能.
+我们在我们的设置中研究了不同模型类型的初始化效果.
+为了做到这一点, 我们训练了多个模型, 采用或不采用 **TWIST** 初始化, 同时保持了计算预算.
+如[图 02](#Fig.02) 所示, **TWIST** 初始化在训练初期对所有评估模型都有益, 但其最终影响因模型架构和实现而异.
+注意, [图 02](#Fig.02) 中的 x 轴表示理论 FLOPs, 计算方法为 $6 * N_{params} * D_{tokens}$ 遵循[^hoffmann2022training].
+然而, 由于模型架构和实现的差异, 实际效率可能有所不同, 导致 24 小时内处理的计算量会有所不同.
+
+结果表明, **TWIST** 初始化的好处可能是巨大的, 特别是 **Qwen2.5** 这样的顶级模型.
+因此, 我们优先考虑基于现有预训练文本语言模型的研究.
+有趣的是, [图 02](#Fig.02) 展示了 **Qwen2.5** 即使不采用 **TWIST** 初始化, 也能胜过其他模型, 这可能意味着它们的架构设计或大小也能提供一些好处.
+
+</td></tr>
+<tr><td colspan="2">
+
+Figure 2: Comparing PPL of different models of similar parameter count, with and without TWIST initialisation.
 
 </td></tr>
 <tr><td>
 
-**Optimal model size & family.**
+**Optimal Model Size & Family**
 
 [^cuervo2024scaling] conducted a scaling analysis on GSLM-style SLMs, estimating the optimal model size and token count for a compute-efficient model.
 However, using a text LM initialisation might impact these findings.
-As we observe, TWIST initialisation greatly impact model performance, suggesting that prioritising larger models may be more effective than simply increasing the dataset size.
-Additionally, various model families gain different advantages from TWIST initialisation; for example, Qwen$2.5$ models show significantly better performance compared to OPT models.
-In Figure~\ref{fig:model_choice}, we compare the results under the pre-defined compute budget within model families.
-We use the text LM original names for clarity, but note that the actual size will be notably smaller due to reduced vocabulary size, e.g Qwen$2.5$-$0.5$B has $358$M parameters.
-Full model sizes can be found in Appendix \ref{sec:model_sizes}.
+As we observe, **TWIST** initialisation greatly impact model performance, suggesting that prioritising larger models may be more effective than simply increasing the dataset size.
+Additionally, various model families gain different advantages from **TWIST** initialisation; for example, **Qwen2.5** models show significantly better performance compared to **OPT** models.
+In [Figure.03](#Fig.03), we compare the results under the pre-defined compute budget within model families.
 
-We note that the best model sizes for both **MobileLLM**[^mobilellm], SmolLM2 [^smollm2] and Pythia [^pythia] are $\sim300M$ parameters, while for OPT the best is $125$M.
-According to [^cuervo2024scaling], the estimated optimal model size is approximately $66$M parameters.
-However, the best-performing model, Qwen$2.5$, is significantly larger.
+We use the text LM original names for clarity, but note that the actual size will be notably smaller due to reduced vocabulary size, e.g **Qwen2.5-0.5B** has 358M parameters.
+Full model sizes can be found in Appendix B.
+
+We note that the best model sizes for both **MobileLLM**[^mobilellm], **SmolLM2**[^smollm2] and **Pythia**[^pythia] are $\sim300M$ parameters, while for **OPT** the best is 125M.
+According to [^cuervo2024scaling], the estimated optimal model size is approximately 66M parameters.
+However, the best-performing model, **Qwen2.5**, is significantly larger.
 Since there are no smaller models in this family, it is difficult to determine whether this deviation is due to the quality of the initialisation or other factors.
-Moving forward, we proceed with both OPT-$125$M and Qwen$2.5$-$0.5$B.
+Moving forward, we proceed with both **OPT-125M** and **Qwen2.5-0.5B**.
 
 </td><td>
+
+**最优模型大小与系列**
+
+[^cuervo2024scaling] 对 GSLM 式 SLM 进行了规模分析, 估计了计算效率模型的最优模型大小和 Token 数量.
+然而, 使用文本语言模型初始化可能会影响这些发现.
+正如我们所观察到的, **TWIST** 初始化大大影响模型性能, 这表明, 优先考虑更大的模型可能比简单增加数据集大小更有效.
+此外, 各种模型系列从 **TWIST** 初始化中获得了不同的优势;
+例如, **Qwen2.5** 模型相较于 **OPT** 模型, 显示出显著的性能优势.
+在[图 03](#Fig.03) 中, 我们比较了在模型系列内预定义的计算预算下的结果.
+
+我们为清晰起见, 使用原始文本语言模型名称, 但请注意, 实际大小会由于减少词汇量而显著减小, 例如 **Qwen2.5-0.5B** 有 358M 参数.
+完整模型大小可以在附录 B 中找到.
+
+我们注意到对于 **MobileLLM**[^mobilellm], **SmolLM2**[^smollm2] 和 **Pythia**[^pythia], 最优模型大小为 $\sim300M$, 而对于 **OPT** 系列, 最优模型大小为 125M.
+根据 [^cuervo2024scaling], 估计的最优模型大小约为 66M 参数.
+然而, 最佳模型, **Qwen2.5**, 明显大得多.
+因为该系列没有更小的模型, 很难确定这一差异是否是由于初始化质量或其他因素导致的.
+因此, 我们继续采用 **OPT-125M** 和 **Qwen2.5-0.5B**.
 
 </td></tr>
 <tr><td>
 
-**Dropout.**
+**Dropout**
 
-The original OPT models includes dropout to mitigate overfitting.
+The original **OPT** models includes dropout to mitigate overfitting.
 Although dropout is beneficial for regularisation, it effectively decreases the number of gradient updates per parameter without shortening the update-step wall time.
 Hence, reduces the number of parameter updates per second.
 Following **Cramming**[^geiping2023cramming], we experiment with removing dropout and observed improved performance in our setup.
 
 </td><td>
 
+**随机失活**
+
+原始的 **OPT** 模型包含随机失活以减轻过拟合.
+虽然随机失活有助于正则化, 但它实际上会减少每个参数的梯度更新次数, 而不会缩短更新步长的持续时间.
+因此, 减少每秒参数更新次数.
+遵循 **Cramming**[^geiping2023cramming], 我们尝试去掉随机失活, 并观察到在我们的设置中获得了改进性能.
+
 </td></tr>
 <tr><td>
 
-**Positional Encoding.**
+**Positional Encoding**
 
-Transformers rely on positional encoding to capture the order of input tokens.
-Many modern LMs, including the Qwen models, use Rotary Position Embedding[^su2023roformerenhancedtransformerrotary].
+**Transformers** rely on positional encoding to capture the order of input tokens.
+Many modern LMs, including the **Qwen** models, use **Rotary Position Embedding**[^su2023roformerenhancedtransformerrotary].
 This method uses a hyperparameter, $\theta$, to control the trade-off between granularity and the ability to handle long contexts.
-$\theta$ is often tuned to accommodate longer context lengths [^qwen2], [^roziere2023code].
+$\theta$ is often tuned to accommodate longer context lengths (**Qwen2.5**[^qwen2]; **Code LLaMA**[^roziere2023code]).
 Since our context length is significantly shorter than that of the original LLM, we explore reducing $\theta$ for potential performance gains.
-Our findings show that setting $\theta=10,000$ with a context length of $1024$ enhances performance, so we adopt this configuration moving forward.
+Our findings show that setting $\theta=10,000$ with a context length of 1024 enhances performance, so we adopt this configuration moving forward.
 We note that since we increase the context length, we need to reduce the batch size as well, to not run into memory problems when training.
-We reduce the batch size by a half and keep the same amount of gradient accumulation steps, which gives us an effective batch size of $128$.
+We reduce the batch size by a half and keep the same amount of gradient accumulation steps, which gives us an effective batch size of 128.
 
 </td><td>
 
+**位置编码**
+
+**Transformers** 依赖于位置编码来捕获输入 Token 的顺序.
+许多现代语言模型, 包括 **Qwen** 模型, 使用**旋转位置嵌入**[^su2023roformerenhancedtransformerrotary].
+这一方法使用一个超参数 $\theta$ 来控制粒度和处理长上下文能力之间的平衡.
+$\theta$ 通常根据长上下文长度进行调优 (**Qwen2.5**[^qwen2]; **Code LLaMA**[^roziere2023code]).
+由于我们的上下文长度远小于原始语言模型的上下文长度, 我们探索降低 $\theta$ 以获得潜在性能提升.
+我们的发现表明, 设置 $\theta=10,000$ 且上下文长度为 1024 增强了性能, 因此我们采用这一配置作为后续实验的基础.
+我们注意到, 由于我们增加了上下文长度, 我们需要减少批量大小, 以避免在训练时出现内存问题.
+我们将批量大小减半, 保持相同的梯度累积步数, 因此获得了有效批量大小为 128.
+
 </td></tr>
 <tr><td>
 
-**Optimiser and Scheduler.**
+**Optimizer and Scheduler**
 
-Various optimisers and schedulers have been developed to enhance training efficiency, reduce memory usage [^shazeer2018adafactoradaptivelearningrates], [^dettmers20228bitoptimizersblockwisequantization], or accelerate convergence [^pagliardini2024ademamix], [^chen2023lion].
+Various optimisers and schedulers have been developed to enhance training efficiency, reduce memory usage (**Adafactor**[^shazeer2018adafactoradaptivelearningrates], [^dettmers20228bitoptimizersblockwisequantization]), or accelerate convergence (**AdEMAMeix**[^pagliardini2024ademamix], **Lion**[^chen2023lion]).
 With limited compute, faster convergence and better memory efficiency can be especially important.
-We first consider efficient optimisers, specifically AdamW with fused kernels, and 8-bit AdamW, but observe no notable improvements in batch size or runtime compared to standard AdamW.
+We first consider efficient optimisers, specifically **AdamW with fused kernels**, and **8-bit AdamW**, but observe no notable improvements in batch size or runtime compared to standard **AdamW**.
 This could do with the relatively small model size, resulting in a minimal memory footprint of the optimisers.
-We then compare AdamW with two state-of-the-art optimisers: AdaLomo [^lv2023adalomo] and AdEMAMeix [^pagliardini2024ademamix].
-Results, presented in Figure~\ref{fig:optim}, suggest that with the original InverseSqrt scheduler used by **TWIST**[^twist], using AdEMAMeix improves validation loss, compared to AdamW, with AdaLomo far behind.
+We then compare **AdamW** with two state-of-the-art optimisers: **AdaLomo**[^lv2023adalomo] and **AdEMAMeix**[^pagliardini2024ademamix].
+Results, presented in [Figure.04](#Fig.04), suggest that with the original InverseSqrt scheduler used by **TWIST**[^twist], using **AdEMAMeix** improves validation loss, compared to **AdamW**, with **AdaLomo** far behind.
 
 Next, we analyse a cosine decay learning rate scheduler, in place of the original InverseSqrt as this was shown to improve convergence [^loshchilov2016sgdr].
-We consider the previous optimisers, and provide the validation loss throughout training in Figure~\ref{fig:optim}.
-We see that this notably improved the loss for AdamW, and slightly harmed results for AdEMAMeix.
-Overall, AdamW with a cosine schedule provide the best setup, far outperforming the original setup.
+We consider the previous optimisers, and provide the validation loss throughout training in [Figure.04](#Fig.04).
+We see that this notably improved the loss for **AdamW**, and slightly harmed results for **AdEMAMeix**.
+Overall, **AdamW** with a cosine schedule provide the best setup, far outperforming the original setup.
 
 </td><td>
+
+**优化器和调度器**
+
+各种优化器和调度器被开发用于增强训练效率, 减少内存使用 (**Adafactor**[^shazeer2018adafactoradaptivelearningrates], [^dettmers20228bitoptimizersblockwisequantization]), 或加速收敛 (**AdEMAMeix**[^pagliardini2024ademamix], **Lion**[^chen2023lion]).
+在有限的计算下, 更快的收敛和更好的内存效率尤为重要.
+
+我们首先考虑高效的优化器, 特别是带有**融合内核的 AdamW**, 以及 **8-bit AdamW**, 但在批量大小和运行时间方面, 与标准 **AdamW** 相比, 观察不到显著的改进.
+这可能与相对较小的模型大小有关, 导致优化器的内存占用最小.
+然后, 我们比较了 **AdamW** 与两个最先进的优化器: **AdaLomo**[^lv2023adalomo] 和 **AdEMAMeix**[^pagliardini2024ademamix].
+结果, 如[图 04](#Fig.04) 所示, 表明, 在 **TWIST**[^twist] 使用的原始 InverseSqrt 调度器下, 使用 **AdEMAMeix** 能够改善验证损失, 相比于 **AdamW**, **AdaLomo** 稍逊.
+
+接下来, 我们分析了余弦衰减学习率调度器, 代替了原始的 InverseSqrt, 因为这一方法被证明可以提高收敛速度 [^loshchilov2016sgdr].
+我们考虑之前的优化器, 并在训练过程中提供验证损失, 如[图 04](#Fig.04) 所示.
+我们看到, 对于 **AdamW**, 这一方法显著提高了损失, 而对于 **AdEMAMeix**, 结果稍有下降.
+总而言之, **AdamW** 与余弦调度器提供的最佳设置, 远远优于原始设置.
 
 </td></tr></table>
 
@@ -472,7 +554,7 @@ To introduce greater diversity in speaking styles and content, we curate additio
 For all mentioned datasets, we use the official data cleaning and preprocessing scripts when available.
 Specifically, for Libri-light, we apply the official Voice Activity Detection model to remove silences and generate smaller audio segments.
 To evaluate the impact of dataset diversity, we compare the performance of SLMs trained using our best training recipes using a subset of LibriSpeech and Libri-light against all curated datasets.
-This comparison is conducted for both OPT-$125$M, which processes a large number of tokens during training, and Qwen-$0.5$B, which encounters significantly less data due to model size.
+This comparison is conducted for both **OPT-125M**, which processes a large number of tokens during training, and **Qwen-0.5B**, which encounters significantly less data due to model size.
 Results are summarised in Table~\ref{tab:data_analysis}.
 We observe that dataset diversity has an overall negative effect on model performance.
 We hypothesise this is due to the models struggling in modelling rich and complex audio under such low compute resources.
@@ -491,9 +573,9 @@ Additionally, prior research has shown that HuBERT units largely remove speaker 
 TinyStories has been demonstrated to enhance text LM performance and improve SLMs[^cuervo2024scaling].
 Results are presented in Table~\ref{tab:data_analysis}.
 Results indicate that incorporating such synthetic data into the training data-mix significantly boosts both modelling and generative performance metrics, across all evaluated setups.
-We also consider adding the synthetic data to the original TWIST recipe, and the results in the bottom of Table \ref{tab:slam} suggests that while this helps with semantic metrics, it is far from enough without other optimizations we introduced.
+We also consider adding the synthetic data to the original **TWIST** recipe, and the results in the bottom of Table \ref{tab:slam} suggests that while this helps with semantic metrics, it is far from enough without other optimizations we introduced.
 
-We see that across all datasets, and specifically with our best mixture Libri-Light, LibriSpeech and sTinyStories, Qwen-$0.5$B outperforms OPT-$125$M so we continue with it to the final stages.
+We see that across all datasets, and specifically with our best mixture Libri-Light, LibriSpeech and sTinyStories, **Qwen-0.5B** outperforms **OPT-125M** so we continue with it to the final stages.
 
 </td><td>
 
@@ -556,9 +638,9 @@ Thus we stick to $30$ minutes out of 24  hours for DPO, using the rest for pre-t
 <table><tr><td width="50%">
 
 Building on these empirical findings, we develop the final ***Slam*** recipe.
-Using it, we train SLMs based on Qwen$2.5$-$0.5$B.
-We then compare ***Slam*** to the TWIST model family across various sizes: $350$M, 1.3B, 7B, and 13B.
-We also present results for TWIST-$350$M using our computational constraints but following TWIST's original training recipe, along with our synthetic data.
+Using it, we train SLMs based on **Qwen2.5-0.5B**.
+We then compare ***Slam*** to the **TWIST** model family across various sizes: $350$M, 1.3B, 7B, and 13B.
+We also present results for **TWIST**-$350$M using our computational constraints but following **TWIST**'s original training recipe, along with our synthetic data.
 Finally, we report results for the top-performing model from [^cuervo2024scaling], including their predicted optimal performance under our compute budget based on SLM scaling laws.
 Results are reported in Table~\ref{tab:slam}.
 The results indicate that ***Slam*** delivers performance that is either superior or on par with baseline models while requiring significantly fewer computational resources (e.g., a single A5000 for a day compared to 160 days on a V100).
@@ -588,8 +670,8 @@ We note that DPO training on synthetic data for 2 epochs, notably boosts perform
 
 In this work we show that training high quality SLMs with a very modest compute budget, is feasible.
 We give these main guidelines:
-(i) \textbf{Do not skimp on the model} - not all model families are born equal and the TWIST initialisation exaggerates this, thus it is worth selecting a stronger / bigger text-LM even if it means less tokens.
-we found Qwen$2.5$ to be a good choice;
+(i) \textbf{Do not skimp on the model} - not all model families are born equal and the **TWIST** initialisation exaggerates this, thus it is worth selecting a stronger / bigger text-LM even if it means less tokens.
+we found **Qwen2.5** to be a good choice;
 (ii) \textbf{Utilise synthetic training data} - pre-training on data generated with TTS helps a lot;
 (iii) \textbf{Go beyond next token prediction} - we found that DPO boosts performance notably even when using synthetic data, and as little as $30$ minutes training massively improves results;
 (iv) \textbf{Optimise hyper-parameters} - as researchers we often dis-regard this stage, yet we found that tuning learning rate schedulers and optimising code efficiency can improve results notably.
@@ -601,13 +683,13 @@ We hope that these insights, and open source resources will be of use to the res
 
 [^ansel2024pytorch]: **PyTorch 2**: Fast Machine Learning through Dynamic Python Bytecode Transformation and Graph Compilation. ACM ICASPLOS2024.
 [^borsos2023audiolm]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](ST2S/2022.09.07_AudioLM.md) TASLP2023.
-[^chen2023lion]:
+[^chen2023lion]: [**Lion**: Symbolic Discovery of Optimization Algorithms.](../../Modules/Optimization/2023.02.13_Lion.md) ArXiv:2302.06675.
 [^ctrl]:
 [^cuervo2024scaling]: Scaling Properties of Speech Language Models. ArXiv:2404.00685.
 [^cui2024recent]: [**Survey by Cui et al (2024)**: Recent Advances in Speech Language Models: A Survey.](../../Surveys/2024.10.01_Recent_Advances_in_Speech_Language_Models__A_Survey_20P/Main.md) ArXiv:2410.03751.
 [^dao2023flashattention2fasterattentionbetter]: [**FlashAttention2**: Faster Attention with Better Parallelism and Work Partitioning.](../../Modules/Attention/2023.07.17_FlashAttention2.md) ArXiv:2307.08691.
 [^defossez2024moshi]: [**Moshi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../SpokenDialogue/2024.09.17_Moshi.md) ArXiv:2410.00037.
-[^dettmers20228bitoptimizersblockwisequantization]:
+[^dettmers20228bitoptimizersblockwisequantization]: 8-Bit Optimizers via Block-Wise Quantization. ArXiv:2110.02861/ICLR2022.
 [^divpo]:
 [^dunbar2021zero]:
 [^elmakies2025unsupervisedspeechsegmentationgeneral]: Unsupervised Speech Segmentation: A General Approach Using Speech Language Models. ArXiv:2501.03711.
@@ -633,7 +715,7 @@ We hope that these insights, and open source resources will be of use to the res
 [^liu2024efficient]: Efficient Training of Self-Supervised Speech Foundation Models on a Compute Budget. ArXiv:2409.16295/SLT2024.
 [^ll]:
 [^loshchilov2016sgdr]:
-[^loshchilov2017decoupled]:
+[^loshchilov2017decoupled]: [**AdamW**: Decoupled Weight Decay Regularization.](../../Modules/Optimization/2017.11.14_AdamW.md) ICLR2019.
 [^ls]:
 [^lv2023adalomo]:
 [^lv2024scalable]: **LPA**: Scalable Efficient Training of Large Language Models with Low-dimensional Projected Attention. ArXiv:2411.02063.
@@ -645,28 +727,28 @@ We hope that these insights, and open source resources will be of use to the res
 [^neiterman2024layerdropback]: **LDB**: LayerDropBack: A Universally Applicable Approach for Accelerating Training of Deep Networks. ArXiv:2412.18027.
 [^nguyen2022generative]: [**dGSLM**: Generative Spoken Dialogue Language Modeling.](../SpokenDialogue/2022.03.30_dGSLM.md) ArXiv:2203.16502.
 [^ouyang2022training]:
-[^pagliardini2024ademamix]:
+[^pagliardini2024ademamix]: [**AdEMAMix**: The AdEMAMix Optimizer: Better, Faster, Older](../../Modules/Optimization/2024.09.05_AdEMAMix.md) ArXiv:2409.03137.
 [^park2024long]: [**SpeechSSM**: Long-Form Speech Generation with Spoken Language Models.](2024.12.24_SpeechSSM.md) ArXiv:2412.18603.
 [^peng2024mslm]: **MSLM-S2ST**: A Multitask Speech Language Model for Textless Speech-to-Speech Translation with Speaker Style Preservation. ArXiv:2403.12408.
 [^peng2024survey]: [**Survey by Peng et al (2024)**: A Survey on Speech Large Language Models.](../../Surveys/2024.10.24__Survey__A_Survey_on_Speech_Large_Language_Models_(17P).md) ArXiv:2410.18908.
 [^people]:
 [^polyak2021speech]: [Speech Resynthesis from Discrete Disentangled Self-Supervised Representations.](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md) ArXiv:2104.00355.
 [^popuri2022enhanced]: Enhanced Direct Speech-to-Speech Translation Using Self-supervised Pre-training and Data Augmentation. ArXiv:2204.02967.
-[^pythia]:
-[^qwen2]:
+[^pythia]: Pythia: A Suite for Analyzing Large Language Models Across Training and Scaling. ArXiv:2304.01373/ICML2023.
+[^qwen2]: [**Qwen2.5**: Qwen2.5 Technical Report.](../TextLM/2024.12.19_Qwen2.5.md) ArXiv:2412.15115.
 [^qwen_audio]: [**Qwen-Audio**: Advancing Universal Audio Understanding via Unified Large-Scale Audio-Language Models.](ST2T/2023.11.14_Qwen-Audio.md) ArXiv:2311.07919.
 [^radford2023robust]:
 [^rae2021scaling]:
 [^rafailov2024dpo]: [**DPO**： Direct Preference Optimization: Your Language Model is Secretly a Reward Model.](../../Modules/RLHF/2023.05.29_DPO.md) ArXiv:2305.18290/NeurIPS2024.
 [^rawat2024little]: **SALT**: A Little Help Goes a Long Way: Efficient LLM Training by Leveraging Small LMs. ArXiv:2410.18779.
-[^roziere2023code]:
+[^roziere2023code]: **Code LLaMA**: Open Foundation Models for Code. ArXiv:2308.12950.
 [^salmonn]: [**SALMONN**: Towards Generic Hearing Abilities for Large Language Models.](../SpokenDialogue/2023.10.20_SALMONN.md) ICLR2024.
 [^scaling_interleaving]: Scaling Speech-Text Pre-training with Synthetic Interleaved Data. ArXiv:2411.17607.
-[^shazeer2018adafactoradaptivelearningrates]:
+[^shazeer2018adafactoradaptivelearningrates]: **Adafactor**: Adaptive Learning Rates with Sublinear Memory Cost. ArXiv:1804.04235.
 [^shen2023efficient]: [**Survey by Shen et al (2023)**: On Efficient Training of Large-Scale Deep Learning Models: A Literature Review](../../Surveys/2023.04.07__Survey__On_Efficient_Training_of_Large-Scale_Deep_Learning_Models_(60P).md) ArXiv:2304.03589.
-[^smollm2]:
+[^smollm2]: SmolLM2: When Smol Goes Big - Data-Centric Training of a Small Language Model. ArXiv:2502.02737.
 [^spiritlm]: [**SpiRit-LM**: Interleaved Spoken and Written Language Model.](2024.02.08_SpiRit-LM.md) ArXiv:2402.05755/TACL2025.
-[^su2023roformerenhancedtransformerrotary]:
+[^su2023roformerenhancedtransformerrotary]: [Roformer: Enhanced Transformer with Rotary Position Embedding.](../../Modules/PositionEmb/RoPE.md) Neurocomputing2024.
 [^swag]:
 [^swc]:
 [^tedlium]:
