更新 Slamming 数据部分

--- a/Models/SpeechLM/2025.02.19_Slamming.md
+++ b/Models/SpeechLM/2025.02.19_Slamming.md
@@ -533,55 +533,86 @@ Overall, **AdamW** with a cosine schedule provide the best setup, far outperform
 
 </td></tr></table>
 
-### Data
+### Data: 数据
 
 <table><tr><td width="50%">
 
 Next, we examine how the training data-mix influences performance in a compute-constrained setting.
-Specifically, we explore whether diversity in accents, speaking styles, etc.
-is beneficial and assess whether synthetic data can enhance semantic modelling abilities.
+Specifically, we explore whether diversity in accents, speaking styles, etc. is beneficial and assess whether synthetic data can enhance semantic modelling abilities.
 
 </td><td>
+
+接下来, 我们检查训练数据混合对计算受限设置中的性能影响.
+具体来说, 我们探索在口音, 说话风格等方面引入多样性是否有益, 并评估合成数据是否可以增强语义建模能力.
 
 </td></tr>
 <tr><td>
 
-**Diverse Data.**
+**Diverse Data**
 
 We begin by examining how dataset diversity impacts model performance.
-Many leading speech datasets, such as those based on audiobooks [^ls], [^ll], consist of relatively clean, single-speaker recordings within a specific content domain.
-To introduce greater diversity in speaking styles and content, we curate additional datasets, including VoxPopuli [^vp], Tedlium [^tedlium], PeopleSpeech [^people], and SWC [^swc].
+Many leading speech datasets, such as those based on audiobooks (**LibriSpeech**[^ls], **Libri-Light**[^ll]), consist of relatively clean, single-speaker recordings within a specific content domain.
+To introduce greater diversity in speaking styles and content, we curate additional datasets, including ***VoxPopuli**[^vp], **Tedlium**[^tedlium], **PeopleSpeech**[^people], and **SWC**[^swc].
 For all mentioned datasets, we use the official data cleaning and preprocessing scripts when available.
-Specifically, for Libri-light, we apply the official Voice Activity Detection model to remove silences and generate smaller audio segments.
-To evaluate the impact of dataset diversity, we compare the performance of SLMs trained using our best training recipes using a subset of LibriSpeech and Libri-light against all curated datasets.
+Specifically, for **Libri-Light**, we apply the official Voice Activity Detection model to remove silences and generate smaller audio segments.
+To evaluate the impact of dataset diversity, we compare the performance of SLMs trained using our best training recipes using a subset of **LibriSpeech** and **Libri-Light** against all curated datasets.
 This comparison is conducted for both **OPT-125M**, which processes a large number of tokens during training, and **Qwen-0.5B**, which encounters significantly less data due to model size.
-Results are summarised in Table~\ref{tab:data_analysis}.
+Results are summarised in Table.01.
 We observe that dataset diversity has an overall negative effect on model performance.
 We hypothesise this is due to the models struggling in modelling rich and complex audio under such low compute resources.
 
 </td><td>
 
+**多样性数据**
+
+我们从检查数据集多样性对模型性能的影响开始.
+现有的主流语音数据集, 例如基于有声书的语料库 (**LibriSpeech**[^ls]; **Libri-Light**[^ll]), 基于相对干净, 单说话人录音, 只包含特定内容领域.
+为了引入说话风格和内容的更多多样性, 我们借助额外的数据集, 包括 ***VoxPopuli**[^vp]; **Tedlium**[^tedlium]; **PeopleSpeech**[^people]; **SWC**[^swc].
+对于所有提到的数据集, 我们尽可能使用官方数据清理和预处理脚本.
+其中, 对于 **Libri-Light**, 我们使用官方语音活动检测模型来去除静音, 生成较小的音频片段.
+
+为了评估数据集多样性, 我们比较 SLM 在使用我们最佳训练配方, 即使用 **LibriSpeech** 和 **Libri-Light** 的子集, 与所有额外的数据集训练的性能.
+这项比较针对 **OPT-125M** 和 **Qwen-0.5B** 进行, 前者处理大量 Token, 后者遇到模型大小限制显著更少的数据量.
+结果总结于表 01.
+
+我们观察到, 数据集多样性对模型性能有着整体负面影响.
+我们假设, 这是由于模型在如此低计算资源下无法很好地处理丰富和复杂的音频.
+
 </td></tr>
 <tr><td>
 
-**Synthetic Data.**
+**Synthetic Data**
 
 Recent studies have highlighted the potential of synthetic data generated through TTS [^cuervo2024scaling] or direct text-to-unit conversion [^scaling_interleaving].
 Hence, we examine the impact of including synthetically generated speech within our constrained compute setup.
-To do so, we synthesised the TinyStories dataset [^tinystories] using a single-speaker TTS model [^wang2021fairseq], as it is computationally efficient.
-Additionally, prior research has shown that HuBERT units largely remove speaker information (**DISSC**[^maimon2023dissc]).
-TinyStories has been demonstrated to enhance text LM performance and improve SLMs[^cuervo2024scaling].
-Results are presented in Table~\ref{tab:data_analysis}.
+To do so, we synthesised the **TinyStories dataset**[^tinystories] using a single-speaker TTS model [^wang2021fairseq], as it is computationally efficient.
+Additionally, prior research has shown that **HuBERT** units largely remove speaker information (**DISSC**[^maimon2023dissc]).
+**TinyStories** has been demonstrated to enhance text LM performance and improve SLMs[^cuervo2024scaling].
+Results are presented in Table.01.
 Results indicate that incorporating such synthetic data into the training data-mix significantly boosts both modelling and generative performance metrics, across all evaluated setups.
 We also consider adding the synthetic data to the original **TWIST** recipe, and the results in the bottom of Table \ref{tab:slam} suggests that while this helps with semantic metrics, it is far from enough without other optimizations we introduced.
 
-We see that across all datasets, and specifically with our best mixture Libri-Light, LibriSpeech and sTinyStories, **Qwen-0.5B** outperforms **OPT-125M** so we continue with it to the final stages.
+We see that across all datasets, and specifically with our best mixture **Libri-Light**, **LibriSpeech** and ***sTinyStories***, **Qwen-0.5B** outperforms **OPT-125M** so we continue with it to the final stages.
 
 </td><td>
 
+**合成数据**
+
+近期的研究表明通过文本转语音[^cuervo2024scaling] 或直接文本到单元转换[^scaling_interleaving] 生成合成数据的潜力.
+因此, 我们检查在受限计算设置中包含合成语音的影响.
+为此, 我们使用单说话人 TTS 模型 [^wang2021fairseq] 合成了 TinyStories 数据集 [^tinystories], 因为它计算效率高.
+此外, 先前的研究表明 HuBERT 单元大部分消除了说话人信息 (**DISSC**[^maimon2023dissc]).
+TinyStories 被证明可以增强文本语言模型性能, 并改善 SLM 性能[^cuervo2024scaling].
+结果如表 01 所示.
+
+结果表明, 将这样的合成数据集纳入训练数据混合, 显著提高了建模和生成性能指标, 适用于所有评估设置.
+我们还考虑将合成数据集添加到原始 **TWIST** 配方中, 结果如表 \ref{tab:slam} 所示, 表明, 虽然这有助于语义度量, 但它并不足以无需我们引入的其他优化.
+
+我们看到在所有数据集上, 特别是我们的最佳混合 **Libri-Light**, **LibriSpeech** 和 ***sTinyStories***, **Qwen-0.5B** 都优于 **OPT-125M**, 因此我们继续使用它到最终阶段.
+
 </td></tr></table>
 
-### Text Interleaving
+### Text Interleaving: 文本交错
 
 <table><tr><td width="50%">
 
@@ -589,7 +620,7 @@ Several recent SLMs combine both speech and text modalities, either predicting b
 Beyond enhancing cross-modal abilities, this has been shown to improve the semantic capabilities of SLMs, even in speech-only evaluations.
 Building on these studies, we investigate whether speech-text interleaving can enhance semantic ability in speech-only tasks, even under strict computational constraints.
 
-For this we use Whisper-large-v3-turbo to get aligned transcriptions of our data, except sTinyStories for which we get alignment from the TTS.
+For this we use Whisper-large-v3-turbo to get aligned transcriptions of our data, except ***sTinyStories*** for which we get alignment from the TTS.
 We follow [^scaling_interleaving] by selecting speech spans with length from a Poisson distribution with $\lambda=10$ totalling $30\%$ of the interleaved data.
 Following **SpiRit-LM**[^spiritlm] we train with balanced batches regarding token count between text data, speech data and interleaved data.
 We use a subset of RedPajama [^weber2024redpajama] filtered by Gopher [^rae2021scaling] rules as our text data.
@@ -713,10 +744,10 @@ We hope that these insights, and open source resources will be of use to the res
 [^li2024flexattention]: **FlexAttention**: FlexAttention for Efficient High-Resolution Vision-Language Models. ArXiv:2407.20228.
 [^lin2024alignslm]: [**Align-SLM**: Textless Spoken Language Models with Reinforcement Learning from AI Feedback.](2024.11.04_Align-SLM.md) ArXiv:2411.01834.
 [^liu2024efficient]: Efficient Training of Self-Supervised Speech Foundation Models on a Compute Budget. ArXiv:2409.16295/SLT2024.
-[^ll]:
+[^ll]: [**Lirbi-Light**: A Benchmark for ASR with Limited or No Supervision.](../../Datasets/2019.12.17_Libri-Light.md) ArXiv:1912.07875/ICASSP2020.
 [^loshchilov2016sgdr]:
 [^loshchilov2017decoupled]: [**AdamW**: Decoupled Weight Decay Regularization.](../../Modules/Optimization/2017.11.14_AdamW.md) ICLR2019.
-[^ls]:
+[^ls]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
 [^lv2023adalomo]:
 [^lv2024scalable]: **LPA**: Scalable Efficient Training of Large Language Models with Low-dimensional Projected Attention. ArXiv:2411.02063.
 [^maimon2023dissc]: **DISSC**: Speaking Style Conversion in the Waveform Domain Using Discrete Self-Supervised Units. ArXiv:2212.09730/EMNLP2023.
