--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -82,7 +82,7 @@ GAN-based feed-forward networks with multiple discriminators, each distinguishin
 [^10]: [**GAN**: Generative Adversarial Nets.](../_Basis/2014.06.10_GAN.md) NeurIPS2014.
 [^11]: [**MelGAN**: MelGAN: Generative Adversarial Networks for Conditional Waveform Synthesis.](../Vocoder/2019.10.08_MelGAN.md) NeurIPS2019.
 [^12]: [**GAN-TTS**: High Fidelity Speech Synthesis with Adversarial Networks.](../Vocoder/2019.09.25_GAN-TTS.md) ICLR2019.
-[^13]: [**HiFi-GAN**: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis](../Vocoder/2020.10.12_HiFi-GAN.md) NeurIPS2020.
+[^13]: [**HiFi-GAN**: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis.](../Vocoder/2020.10.12_HiFi-GAN.md) NeurIPS2020.
 
 </td><td>
 
@@ -1131,7 +1131,7 @@ The audio format is 16-bit PCM with a sample rate of 44 kHz.
 We reduced the sample rate to 22 kHz.
 We randomly split the dataset into a training set (43,470 samples), validation set (100 samples), and test set (500 samples).
 
-[^40]: [The LJ Speech Dataset.](../../Datasets/2017.07.05_LJSpeech.md)
+[^40]: [**LJSpeech**: The LJ Speech Dataset.](../../Datasets/2017.07.05_LJSpeech.md)
 [^41]: [**VCTK**: CSTR VCTK Corpus: English Multi-Speaker Corpus for CSTR Voice Cloning Toolkit.](../../Datasets/2012.08.00_VCTK.md)
 
 </td><td>
