更新 ESPnet-SpeechLM 摘要

--- a/Models/Toolkits/2025.02.21_ESPnet-SpeechLM.md
+++ b/Models/Toolkits/2025.02.21_ESPnet-SpeechLM.md
@@ -45,6 +45,15 @@ The toolkit and its recipes are fully transparent and reproducible at: [this htt
 
 </td><td>
 
+我们展示了 ***ESPnet-SpeechLM***, 一个开放的工具包，设计用于民主化语音语言模型 (SpeechLMs) 和声音驱动的智能应用的发展.
+该工具包将语音处理任务作为通用序列建模问题进行标准化, 涵盖了数据预处理, 预训练, 推理和任务评估的连贯工作流.
+通过 ***ESPnet-SpeechLM***, 用户可以轻松定义任务模板并配置关键设置, 实现无缝和流畅的 SpeechLM 开发.
+该工具包通过为工作流的每一个阶段提供高度可配置的模块以确保灵活性, 效率和可扩展性.
+
+为了说明其能力, 我们提供了多个使用案例, 展示了如何使用 ***ESPnet-SpeechLM*** 构建具有竞争力的 SpeechLMs, 包括一个 1.7B 参数的模型, 在文本和语音任务上进行了预训练, 适用于多种基准.
+
+该工具包及其配方的完整透明性和可重复性可在[此链接](https://github.com/espnet/espnet/tree/speechlm)上找到.
+
 </td></tr></table>
 
 ## 1·Introduction: 引言
